--- a/style.css
+++ b/style.css
@@ -45,6 +45,65 @@ html {
     height: 100%;
     background-color: green;
 }
-.life-bar .danger{
+
+.life-bar .danger {
     background-color: red;
+}
+
+/* Area resultado */
+
+.result {
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.result .win {
+    color: green;
+}
+
+.result .lose {
+    color: red;
+}
+
+/* Area dos Botoes */
+
+.buttons {
+    display: flex;
+    justify-content: center;
+
+}
+
+.btn {
+    padding: 5px 10px;
+    margin: 0px 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+}
+
+.new-game {
+    background-color: darkblue;
+    color: white;
+}
+
+.attack {
+    background-color: darkred;
+    color: white;
+}
+
+.especial-attack {
+    background-color: darkorange;
+    color: black;
+}
+
+.heal {
+    background-color: #259b24;
+    color: #FFF;
+}
+
+.give-up {
+    background-color: lightslategray;
+    color: black;
 }
